Update Graph.java