@@ -1,48 +1,60 @@
 package NonLinear;
 import java.util.*;
 
-public class Graph {
-	
+public class Graph{
 	int v;
-	 ArrayList<LinkedList> vertex;
-	 
-	public Graph(int v){
+	ArrayList<LinkedList> adj;
+	
+	Graph(int v){
+		
 		this.v=v;
-		vertex =new ArrayList<LinkedList>(v);
+		adj=new ArrayList<LinkedList>(v);
+		
 		for(int i=0;i<v;i++) {
-			vertex.add(new LinkedList());
+			 
+			adj.add(new LinkedList());
+			adj.get(i).add(0,null);
 		}
-		 
-	 }
-	 
-	public void AddVertex(String w,int i) {
-		 
-		 vertex.get(i).addFirst(w);
-		 
-	 }
-	 
-	public void AddEdge(String source,String dest) {
-		for(int i=0;i<v;i++) {
-			if(source==vertex.get(i).getFirst()) {
-				vertex.get(i).addLast(dest);
+		
+	}
+	
+	public void addedge(String src,String dest) {
+		int i;
+		for(i=0;i<v;i++) {
+			if(adj.get(i).get(0)==null) {
+				adj.get(i).removeFirst();
+				adj.get(i).addFirst(src);
+				adj.get(i).addLast(dest);
 				
+				break;
+			}
+			else if(src==adj.get(i).getFirst()) {
+				adj.get(i).addLast(dest);
+				
+				break;
 			}
 			
 		}
 		
-	}
-	public void getconnection(String node) {
-		for(int i=0;i<v;i++) {
-			if(node==vertex.get(i).getFirst()) {
-			 System.out.println(vertex.get(i));//it will give all the linked list stored element
-			  
-			 
-			 
-			}
-		}
+		
 	}
 	
-}
+	public void getGraph() {
+		int i,j;
+		for(i=0;i<adj.size();i++) {
+			
+			System.out.print(adj.get(i).getFirst()+"->");
+			
+			for(j=1;j<adj.get(i).size();j++) {
+			
+				System.out.print(adj.get(i).get(j)+",");
+			}
+			System.out.println();
+		}
+	}
+}//graph closed
+
+
 
 
 
